src/objects/MT_RankingVersion__c.object
<CustomObject>
    <fields>
        <fullName>MT_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Datum</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MT_Potential__c</fullName>
        <label>Potenzial</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_Simulation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Simulation</label>
        <type>Checkbox</type>
    </fields>
    <label>Ranking Version</label>
    <nameField>
        <displayFormat>MRV-{000000}</displayFormat>
        <label>Ranking Version Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ranking Versions</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>